fucking change index

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="container">
       <div class="content">
-        <a href="index.html">
+        <a href="corp.html">
           <div class="item">
             <div class="back"></div>
             <img src="/img/corp1.svg" alt="" />
